force-app/main/default/objects/Persondetail__c/Persondetail__c.object-meta.xml
<CustomObject>
    <label>Persondetail</label>
    <nameField>
        <label>Persondetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persondetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>