force-app/main/default/objects/Persondetail__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Persondetails</relationshipLabel>
    <relationshipName>Persondetails</relationshipName>
    <type>Lookup</type>
</CustomField>