force-app/main/default/objects/Persondetail__c/fields/Person_EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>Person_EmployeeID__c</fullName>
    <label>Person EmployeeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>