force-app/main/default/objects/Persondetail__c/fields/Person_phone__c.field-meta.xml
<CustomField>
    <fullName>Person_phone__c</fullName>
    <label>Person phone</label>
    <type>Phone</type>
</CustomField>